# joyus-ai

./: .gitignore  .gitleaks.toml  .spec-kitty.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  generate_pdf.py  hosting-comparison.md  jawn-ai-plan.md  jawn-ai-platform-overview.jsx  jawn-ai-requirements-brief.md  joyus-ai-plan.md  joyus-ai-requirements-brief.md  project-status-feb10.md  zivtech-skills-marketplace-architecture.html  zivtech_ai_analyst_plan.md
joyus-profile-engine/: .gitignore  README.md  pyproject.toml
joyus-profile-engine/fixtures/example/: doc_01.txt  doc_02.txt  doc_03.txt  doc_04.txt  doc_05.txt
joyus-profile-engine/joyus_profile/: __init__.py  exceptions.py  utils.py
joyus-profile-engine/joyus_profile/analyze/: __init__.py  audience.py  markers.py  structure.py  stylometrics.py  vocabulary.py
joyus-profile-engine/joyus_profile/attribute/: __init__.py  cascade.py  identifier.py  outsider.py
joyus-profile-engine/joyus_profile/cli/: main.py
joyus-profile-engine/joyus_profile/emit/: __init__.py  skill_emitter.py  skill_md.py  validators.py
joyus-profile-engine/joyus_profile/ingest/: __init__.py  formats.py  loader.py  preprocessor.py
joyus-profile-engine/joyus_profile/models/: __init__.py  attribution.py  content.py  corpus.py  features.py  hierarchy.py  monitoring.py  profile.py  verification.py
joyus-profile-engine/joyus_profile/monitor/: __init__.py  alerts.py  config.py  diagnosis.py  drift_detector.py  observability.py  repair.py  (+5 more)
joyus-profile-engine/tests/: conftest.py
(+1099 files in other folders)
